force-app/main/default/objects/sma__MAAssignmentDebugLog__c/sma__MAAssignmentDebugLog__c.object-meta.xml
<CustomObject>
    <label>MapAnything Assignment Debug Log</label>
    <nameField>
        <label>MapAnything Assignment Debug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Assignment Debug Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>