force-app/main/default/objects/sma__MAAssignmentDebugLog__c/fields/sma__Body__c.field-meta.xml
<CustomField>
    <fullName>sma__Body__c</fullName>
    <label>Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>