force-app/main/default/objects/sma__MAAssignmentDebugLog__c/fields/sma__Description__c.field-meta.xml
<CustomField>
    <fullName>sma__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>