force-app/main/default/objects/sma__MAAssignmentDebugLog__c/fields/sma__Lead__c.field-meta.xml
<CustomField>
    <fullName>sma__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MapAnything Auto-Assignment Logs</relationshipLabel>
    <relationshipName>LeadAutoAssignmentLogs</relationshipName>
    <type>Lookup</type>
</CustomField>