force-app/main/default/objects/sma__MAAssignmentDebugLog__c/fields/sma__Plan__c.field-meta.xml
<CustomField>
    <fullName>sma__Plan__c</fullName>
    <label>MapAnything Assignment Plan</label>
    <referenceTo>sma__MAAssignmentPlan__c</referenceTo>
    <relationshipLabel>MapAnything Auto-Assignment Logs</relationshipLabel>
    <relationshipName>PlanLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>